force-app/main/default/objects/CLQ_Staff_Training__c/CLQ_Staff_Training__c.object-meta.xml
<CustomObject>
    <label>Staff Training</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Staff Training No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Training</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>