force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_CA__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CA__c</fullName>
    <label>CA</label>
    <type>Date</type>
</CustomField>