force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Course_Name__c</fullName>
    <label>Course Name_1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Conscious Discipline</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>How to increase the</fullName>
            </value>
            <value>
                <fullName>Management of Communicable Disease</fullName>
            </value>
            <value>
                <fullName>Supporting Children</fullName>
            </value>
            <value>
                <fullName>Child Abuse Recognition and Prevention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>