force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Credits__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Credits__c</fullName>
    <label>Credits</label>
    <length>20</length>
    <type>Text</type>
</CustomField>