force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Full_Course_Completed__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Full_Course_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Course Completed</label>
    <type>Checkbox</type>
</CustomField>