force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Highest_Verified_Education__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Highest_Verified_Education__c</fullName>
    <formula>TEXT( CLQ_Staff_Record__r.CLQ_Highest_Verified_Education_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Highest Verified Education</label>
    <type>Text</type>
</CustomField>