force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Hire_Date_To__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Hire_Date_To__c</fullName>
    <label>Hire Date To</label>
    <type>Date</type>
</CustomField>