force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Hours__c</fullName>
    <label>Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>