force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_MCD__c.field-meta.xml
<CustomField>
    <fullName>CLQ_MCD__c</fullName>
    <label>MCD</label>
    <type>Date</type>
</CustomField>