force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_OH_Approved__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OH_Approved__c</fullName>
    <label>OH Approved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>