force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_On_Site_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLQ_On_Site_Hours__c</fullName>
    <label>On Site Hours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>