force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_OPR_Hours__c.field-meta.xml
<CustomField>
    <fullName>CLQ_OPR_Hours__c</fullName>
    <label>OPR Hours</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>