force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Staff_Position__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_Position__c</fullName>
    <formula>TEXT( CLQ_Staff_Record__r.CLQ_Position__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Position</label>
    <type>Text</type>
</CustomField>