force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Staff_Record__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Staff_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Name</label>
    <referenceTo>CLQ_Staff_Record__c</referenceTo>
    <relationshipLabel>Staff Training</relationshipLabel>
    <relationshipName>Staff_Training</relationshipName>
    <type>Lookup</type>
</CustomField>