force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Training_Date__c</fullName>
    <label>Training Date</label>
    <type>Date</type>
</CustomField>