force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Training_Met__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Training_Met__c</fullName>
    <label>Training Met</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>