force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Training_Org__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Training_Org__c</fullName>
    <label>Training Org</label>
    <length>250</length>
    <type>Text</type>
</CustomField>