force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Training_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>