force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Trn_Course_Name__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Trn_Course_Name__c</fullName>
    <label>Course Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>