force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Type_of_CPR__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type_of_CPR__c</fullName>
    <label>Type of CPR</label>
    <length>250</length>
    <type>Text</type>
</CustomField>