force-app/main/default/objects/CLQ_Staff_Training__c/fields/CLQ_Units__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Units__c</fullName>
    <label>Units</label>
    <length>20</length>
    <type>Text</type>
</CustomField>