force-app/main/default/objects/CLQ_Staff_Training__c/fields/Course_NameF__c.field-meta.xml
<CustomField>
    <fullName>Course_NameF__c</fullName>
    <description>Formula field to hold course name for different record types.</description>
    <formula>CASE(RecordType.Name, &apos;Health &amp; Safety Training&apos;, TEXT(CLQ_Course_Name__c), &apos;Professional Development Training&apos;, CLQ_Trn_Course_Name__c,&apos;&apos;)</formula>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>