force-app/main/default/objects/CLQ_Staff_Training__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <description>To be provided from ODE at point so no info at the point in time.</description>
    <label>Credential</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>