force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Class1__c.field-meta.xml
<CustomField>
    <fullName>PD_Class1__c</fullName>
    <description>Title of required class 1</description>
    <label>PD Class1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>