force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Class1_Hours__c.field-meta.xml
<CustomField>
    <fullName>PD_Class1_Hours__c</fullName>
    <description>Class hours value</description>
    <label>PD Class1 Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>