force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Class1_Taken__c.field-meta.xml
<CustomField>
    <fullName>PD_Class1_Taken__c</fullName>
    <description>Was the class taken?</description>
    <inlineHelpText>Answer: yes, no or exempt</inlineHelpText>
    <label>PD Class1 Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>