force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Class2__c.field-meta.xml
<CustomField>
    <fullName>PD_Class2__c</fullName>
    <description>Title of required class 2</description>
    <label>PD Class2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>