force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Class2_Date__c.field-meta.xml
<CustomField>
    <fullName>PD_Class2_Date__c</fullName>
    <description>Date class taken</description>
    <label>PD Class2 Date</label>
    <type>Date</type>
</CustomField>