force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Qualifying_Hours__c.field-meta.xml
<CustomField>
    <fullName>PD_Qualifying_Hours__c</fullName>
    <description>Qualifying Hours completed by professional</description>
    <label>PD Qualifying Hours</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>