force-app/main/default/objects/CLQ_Staff_Training__c/fields/PD_Required_Hours__c.field-meta.xml
<CustomField>
    <fullName>PD_Required_Hours__c</fullName>
    <description>Required Hours to complete certificate. May be pro-rated.</description>
    <label>PD Required Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>