force-app/main/default/objects/CLQ_Staff_Training__c/recordTypes/CLQ_Health_Safety_Training.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Health_Safety_Training</fullName>
    <active>true</active>
    <description>Courses related to Health &amp; Safety</description>
    <label>Health &amp; Safety Training</label>
</RecordType>