force-app/main/default/objects/CLQ_Staff_Training__c/recordTypes/CLQ_Professional_Development_Training.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Professional_Development_Training</fullName>
    <active>true</active>
    <description>Courses related to Professional Development</description>
    <label>Professional Development Training</label>
</RecordType>