force-app/main/default/objects/CLQ_Staff_Training__c/validationRules/Program_Tran_Onsite_Visit_Pending_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Tran_Onsite_Visit_Pending_Status</fullName>
    <active>true</active>
    <errorConditionFormula>$Setup.ExecutionControlSetting__c.Run_Validation_Rule__c &amp;&amp; ISPICKVAL(CLQ_Staff_Record__r.CLQ_Program_Transaction__r.CLQ_Transaction_Status__c ,&apos;Onsite Visit Pending&apos;)</errorConditionFormula>
    <errorMessage>Program transaction status is Onsite Pending</errorMessage>
</ValidationRule>