force-app/main/default/objects/CLQ_Staff_Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLQ_Course_Name__c</columns>
    <columns>CLQ_Current_Period_Start__c</columns>
    <columns>CLQ_Current_Period_End__c</columns>
    <columns>CLQ_Full_Course_Completed__c</columns>
    <columns>CLQ_Expiration_Date__c</columns>
    <columns>CLQ_Staff_Record__c</columns>
    <columns>CLQ_Staff_Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>